# SD-avansate

./: CMakeLists.txt  README.md  main.cpp
generator/: generator.py
include/: heap.h  leftist_heap.h  rp_heap.h
src/: heap.cpp  leftist_heap.cpp  rp_heap.cpp
